[gd_scene load_steps=7 format=2]

[ext_resource path="res://enemic_lvl_5.gd" type="Script" id=1]
[ext_resource path="res://Chara - BlueIdle00000.png" type="Texture" id=2]
[ext_resource path="res://enemic_lvl_5_k.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 72.1127, 173.607 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 66.0389, 174.334 )

[node name="Enemic_lvl_5_k" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="colision_enemic" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Enemic_lvl_5" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Enemic_lvl_5"]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemic_lvl_5"]
shape = SubResource( 2 )

[node name="Dereta" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 75, 0 )

[node name="Esquerra" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -75, 0 )

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Enemic_lvl_5" to="Enemic_lvl_5" method="_on_Enemic_lvl_5_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
